# Uptimer

./: pyproject.toml
source/: conf.py  index.rst
tests/: test_uptimer.py
uptimer/: uptimer.py
